# beyond_hrp_and_cotton

./: .gitignore  README.md  pyproject.toml  study.py  walkforward.py
code/: bench_crisp_vs_cholesky.py  compute09_adaptive_gamma.py  compute09_sweep_regularization.py  compute09_table_numbers.py  compute10_crsp_backtest.py  compute10b_adaptive_gamma.py  computeB_hrp_example.py  computeC_a1_pathology.py  computeE_a1l1_robustness.py  computeE_robustness.py  emit10_tables.py  fig05_shrinkage_schematic.py  fig06_bias_variance_curves.py  fig06_trajectory.py  fig09_gamma_scatter.py  fig09_plateau_width.py  fig09_sharpe_vs_T.py  fig09_sweep_heatmap.py  fig09_sweep_slices.py  fig10_adaptive_rolling_diff.py  fig10_crsp_timeseries.py  fig10_direction_err_timeseries.py  fig10_gamma_t_series.py  figC_a1_cosine_histogram.py
results/: 00_insample_direction_error_suite.txt  01_walkforward_initial_random_mu.txt  01_walkforward_sensitivity_a1l1.txt  02_walkforward_sensitivity_and_structural.txt  02_walkforward_structural_a1l1.txt  03_a1_deep_dive.txt  03_a1_deep_dive_a1l1.txt  04_minvar_mc_a1l1.txt  04_minvar_mc_with_cotton.txt  11_bench_crisp_vs_cholesky.txt  appendix_c_with_a1l1.txt  appendix_e_a1l1_robustness.txt
